[AlpakkaParser] Makes code compatible with Java 17